# helvetia

./: .bazelrc  .gitignore  MODULE.bazel  docker-compose.yml  load-test.js  pyproject.toml  setup-email.sh  test-load.sh
app/: BUILD.bazel  roadmap.md  run-backup-server.sh  run-dc2-servers.sh  run-primary-servers.sh
app/src/main/java/dao/: UserDao.java  UserDaoImpl.java
app/src/main/java/helvetia/: Server.java
app/src/main/java/main/: ArticleDao.java  ArticleDaoImpl.java  BeReadDao.java  BeReadDaoImpl.java  DB.java  PopularRankDao.java  PopularRankDaoImpl.java  ReadDao.java  ReadDaoImpl.java  RedisCache.java  RsqlToSql.java  Server.java  UserDao.java  UserDaoImpl.java
app/src/main/resources/: log4j2.xml
app/test/src/test/java/: BUILD.bazel
app/test/src/test/java/helvetia/: UserDaoTest.java  UserInsertTest.java
client/: client.js  index.html  load-test.js  package-lock.json  package.json  sample-queries.js  test-queries.js  vite.config.js
client/src/: api.js  articlePopup.js  main.js  rsql.js
client/src/tables/: article.js  beread.js  popularrank.js  read.js  user.js
docker/: build_images.sh
docker/app/: Dockerfile
docker/hdfs/: README.md  docker-compose.yml  hadoop.env  start.sh
docker/hdfs/scripts/: load-articles.sh  prepare-articles-local.sh  upload-staged.sh
docker/postgres/: Dockerfile  init.sql
docker/postgres/logical/: article.sql  be_read.sql  popular_rank.sql  read.sql  user.sql
docker/prometheus/: alertmanager.yml  prometheus.yml
docker/prometheus/grafana/provisioning/dashboards/: dashboards.yml  docker-containers-grouped.json  docker-containers.json  docker-infrastructure.json  docker-vtgate.json  docker-vtt-control.json  docker-vttablet.json  vitess-article.json  vitess-beread.json  vitess-load.json  vitess-popularrank.json  vitess-queries.json  vitess-read.json  vitess-user.json
docker/vitess/: README.md  alertmanager.yml  backup-all-shards.sh  docker-compose.yml  mysql.sh  prometheus-rules.yml  prometheus.yml  run-forever.sh  schemaload-all.sh  schemaload.sh  set_keyspace_durability_policy.sh  stress-tablet-cpu.sh  vreplication-setup.sh  vtctl.sh  vtorc-up.sh  vttablet-up.sh
docker/vitess/config/: category_map.json  init_db.sql  region_map.json  temporal_map.json
docker/vitess/dc2/: docker-compose-dc2.yml  init-keyspaces-dc2.sh  schemaload-all-dc2.sh  set_keyspace_durability_policy-dc2.sh  spawn-dc2.sh  vttablet-up-dc2.sh
docker/vitess/docker/vitess/prometheus-rules.yml/: alerts.yml
docker/vitess/tables/: create_article.sql  create_beread.sql  create_popularrank.sql  create_read.sql  create_user.sql
docker/vitess/vschema/: article_vschema.json  beread_vschema.json  popularrank_vschema.json  read_vschema.json  user_vschema.json
docker/vitess/vtadmin/: discovery-dc2.json  discovery.json
docker/vitess/vtorc/: default.json
docker/vitess/web/vtadmin/: docker-config.js  nginx-spa.conf  package-lock.json
prometheus/: alert-rules.yml  alertmanager.yml  prometheus.yml
proto/: BUILD.bazel  article.proto  be_read.proto  popular_rank.proto  read.proto  user.proto
tools/: bulk_insert.py  bulk_insert_helper.sh  populate_beread.py  populate_popularrank.py
