load("@rules_java//java:defs.bzl", "java_library", "java_binary")

load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "server",
    srcs = glob(["src/main/java/main/*.java"]),
    main_class = "helvetia.main.Server",
    deps = [
        "//app:dao",
        "//proto:user_proto_java",
        "@maven//:com_sparkjava_spark_core",
        "@maven//:com_zaxxer_HikariCP",
    ],
)

java_library(
    name = "dao",
    srcs = glob(["src/main/java/dao/*.java"]),
    deps = [
        "//proto:user_proto_java",
        "@maven//:org_postgresql_postgresql",
    ],
    visibility = ["//visibility:public"],
)
