
load("@protobuf//bazel:java_proto_library.bzl", "java_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")

proto_library(
    name = "user_proto",
    srcs = ["user.proto"],
)

java_proto_library(
    name = "user_proto_java",
    deps = [":user_proto"],
    visibility = ["//visibility:public"]
)